add login feature

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <link type="text/css" rel="stylesheet" href="../css/froala_blocks.css">
     <link rel="stylesheet" href="css/froala_blocks.min.css">
     <link rel="stylesheet" href="/css/skeleton.css">
-
-
 </head>
 
 <body>
@@ -21,7 +19,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-md no-gutters">
                 <div class="col-2 text-left">
-                    <a href="https://www.froala.com">
+                    <a href="http://localhost:4000/www/index.html">
                         <img src="imgs/logo.png" height="30" alt="image">
                     </a>
                 </div>
@@ -36,7 +34,7 @@
                             <a class="nav-link" href="http://localhost:4000/www/index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#fdb-block bg-dark">Features</a>
+                            <a class="nav-link" href="#feature">Features</a>
                         </li>
                         <!-- <li class="nav-item">
                             <a class="nav-link" href="https://www.froala.com">Pricing</a>
@@ -78,7 +76,7 @@
     </section>
 
     <!-- Chức năng trang web  -->
-    <section class="fdb-block bg-dark" style="background-image: url(imgs/hero/purple.svg);">
+    <section id='feature' class="fdb-block bg-dark" style="background-image: url(imgs/hero/purple.svg);">
         <div class="container">
             <div class="row">
                 <div class="col text-center">
