--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-md no-gutters">
                 <div class="col-2 text-left">
-                    <a href="http://localhost:4000/www/index.html">
+                    <a href="http://localhost:4000/index.html">
                         <img src="imgs/logo.png" height="30" alt="image">
                     </a>
                 </div>
@@ -31,19 +31,19 @@
                 <div class="collapse navbar-collapse justify-content-center col-md-8 navbar-collapse-1">
                     <ul class="navbar-nav justify-content-center">
                         <li class="nav-item active">
-                            <a class="nav-link" href="http://localhost:4000/www/index.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="http://localhost:4000/index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#feature">Features</a>
                         </li>
                         <!-- <li class="nav-item">
-                            <a class="nav-link" href="https://www.froala.com">Pricing</a>
+                            <a class="nav-link" href="https:/.froala.com">Pricing</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="http://localhost:4000/www/html/teams.html">Team</a>
+                            <a class="nav-link" href="http://localhost:4000/html/teams.html">Team</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="http://localhost:4000/www/html/contact.html">Đóng góp ý kiến</a>
+                            <a class="nav-link" href="http://localhost:4000/html/contact.html">Đóng góp ý kiến</a>
                         </li>
                     </ul>
                 </div>
@@ -51,7 +51,7 @@
                 <div class="collapse navbar-collapse justify-content-end col-md-2 navbar-collapse-1">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="http://localhost:4000/www/html/login%20form.html">Log In <i class="fas fa-sign-in-alt"></i></a>
+                            <a class="nav-link" href="http://localhost:4000/login/login.php">Log In <i class="fas fa-sign-in-alt"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -69,7 +69,7 @@
                 <div class="col-12 col-md-6 col-lg-5 ml-md-auto text-left">
                     <h1>Froala Blocks</h1>
                     <p class="lead">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                    <p><a class="btn btn-secondary mt-4" href="http://localhost:4000/www/html/Search%20bar.html">Tra ngay</a></p>
+                    <p><a class="btn btn-secondary mt-4" href="http://localhost:4000/html/Search%20bar.html">Tra ngay</a></p>
                 </div>
             </div>
         </div>
@@ -91,21 +91,21 @@
                     <div class="fdb-box fdb-touch">
                         <h2>Feature 1</h2>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-                        <p class="mt-4"><a href="https://www.froala.com">Learn More <i class="fas fa-angle-right"></i></a></p>
+                        <p class="mt-4"><a href="https:/.froala.com">Learn More <i class="fas fa-angle-right"></i></a></p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-10 col-md-8 col-lg-7 col-xl-3 m-auto pt-5 pt-xl-0">
                     <div class="fdb-box fdb-touch">
                         <h2>Feature 2</h2>
                         <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                        <p class="mt-4"><a href="https://www.froala.com">Learn More <i class="fas fa-angle-right"></i></a></p>
+                        <p class="mt-4"><a href="https:/.froala.com">Learn More <i class="fas fa-angle-right"></i></a></p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-10 col-md-8 col-lg-7 col-xl-3 m-auto pt-5 pt-xl-0">
                     <div class="fdb-box fdb-touch">
                         <h2>Feature 3</h2>
                         <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                        <p class="mt-4"><a href="https://www.froala.com">Learn More <i class="fas fa-angle-right"></i></a></p>
+                        <p class="mt-4"><a href="https:/.froala.com">Learn More <i class="fas fa-angle-right"></i></a></p>
                     </div>
                 </div>
             </div>
@@ -118,19 +118,19 @@
                 <div class="col">
                     <ul class="nav justify-content-center">
                         <li class="nav-item">
-                            <a class="nav-link active" href="https://www.froala.com">Home</a>
+                            <a class="nav-link active" href="https:/.froala.com">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://www.froala.com">Features</a>
+                            <a class="nav-link" href="https:/.froala.com">Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://www.froala.com">Privacy Policy</a>
+                            <a class="nav-link" href="https:/.froala.com">Privacy Policy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://www.froala.com">Terms</a>
+                            <a class="nav-link" href="https:/.froala.com">Terms</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://www.froala.com">About</a>
+                            <a class="nav-link" href="https:/.froala.com">About</a>
                         </li>
                     </ul>
 
