--- a/login/login.html
+++ b/login/login.html
@@ -44,6 +44,7 @@
 
 
 <body>
+
     <section class="fdb-block py-0">
         <div class="container py-5 my-5" style="background-image: url(../imgs/shapes/4.svg);">
             <div class=" row justify-content-end">
@@ -55,15 +56,17 @@
                                 <p class="lead">Right at the coast of the Semantics, a large language ocean. A small river named Duden.</p>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col mt-4"><input type="text" class="form-control" placeholder="Username"></div>
-                        </div>
-                        <div class="row mt-4">
-                            <div class="col"><input type="password" class="form-control" placeholder="Password"></div>
-                        </div>
-                        <div class="row mt-4">
-                            <div class="col"><button class="btn btn-secondary" type="button">Login</button></div>
-                        </div>
+                        <form action="process.php" method="post">
+                            <div class="row">
+                                <div class="col mt-4"><input type="text" class="form-control" placeholder="Username" name="user" required></div>
+                            </div>
+                            <div class="row mt-4">
+                                <div class="col"><input type="password" class="form-control" placeholder="Password" name="password" required></div>
+                            </div>
+                            <div class="row mt-4">
+                                <div class="col"><button class="btn btn-secondary" type="submit">Login</button></div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
