--- a/html/header.html
+++ b/html/header.html
@@ -43,19 +43,17 @@
     </style>
     <header>
         <div class="container">
-            <nav class="navbar navbar-expand-md no-gutters">
-                <div class="col-2 text-left">
-                    <a href="https://www.froala.com">
-                        <img src="../imgs/logo.png" height="30" alt="image">
-                    </a>
-                </div>
+            <nav class="navbar navbar-expand-md">
+                <a class="navbar-brand" href="https://www.froala.com">
+                    <img src="./imgs/logo.png" height="30" alt="image">
+                </a>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse-1" aria-controls="navbarNav6" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav3" aria-controls="navbarNav3" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
 
-                <div class="collapse navbar-collapse justify-content-center col-md-8 navbar-collapse-1">
-                    <ul class="navbar-nav justify-content-center">
+                <div class="collapse navbar-collapse" id="navbarNav3">
+                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
                             <a class="nav-link" href="https://www.froala.com">Home <span class="sr-only">(current)</span></a>
                         </li>
@@ -69,18 +67,12 @@
                             <a class="nav-link" href="https://www.froala.com">Team</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://www.froala.com">Contact</a>
+                            <a class="nav-link" href="https://www.froala.com">About</a>
                         </li>
                     </ul>
-                </div>
 
-                <div class="collapse navbar-collapse justify-content-end col-md-2 navbar-collapse-1">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.froala.com">Log In <i class="fas fa-sign-in-alt"></i></a>
-                        </li>
-                    </ul>
-                </div>
+
+                </div><a class="btn btn-outline-primary ml-md-3" href="https://www.froala.com">Login<i class="fas fa-sign-in-alt"></i></a>
             </nav>
         </div>
     </header>
