add form-thong-tin, send-email

--- a/test/test.html
+++ b/test/test.html
@@ -2,46 +2,14 @@
 <html lang="en">
 
 <head>
-    <script type="text/javascript" src="/s2480.js"></script>
-    <meta name="description" content="DuckDuckGo. Privacy, Simplified.">
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>html output form template at DuckDuckGo</title>
-    <link rel="stylesheet" href="/s1987.css" type="text/css">
-    <link rel="stylesheet" href="/r1987.css" type="text/css">
-    <meta name="robots" content="noindex,nofollow">
-    <meta name="referrer" content="origin">
-    <meta name="apple-mobile-web-app-title" content="html output form template">
-    <link rel="preconnect" href="https://links.duckduckgo.com">
-    <link rel="preload" href="/font/ProximaNova-Reg-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" href="/font/ProximaNova-Sbold-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link id="icon60" rel="apple-touch-icon" href="/assets/icons/meta/DDG-iOS-icon_60x60.png?v=2">
-    <link id="icon76" rel="apple-touch-icon" sizes="76x76" href="/assets/icons/meta/DDG-iOS-icon_76x76.png?v=2">
-    <link id="icon120" rel="apple-touch-icon" sizes="120x120" href="/assets/icons/meta/DDG-iOS-icon_120x120.png?v=2">
-    <link id="icon152" rel="apple-touch-icon" sizes="152x152" href="/assets/icons/meta/DDG-iOS-icon_152x152.png?v=2">
-    <link rel="image_src" href="/assets/icons/meta/DDG-icon_256x256.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="HandheldFriendly" content="true">
-    <meta name="apple-mobile-web-app-capable" content="no">
-    <link title="DuckDuckGo" type="application/opensearchdescription+xml" rel="search" href="https://duckduckgo.com/opensearch.xml?atb=v278-6__">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 
 <body>
-    <div id="r1-0" class="result results_links_deep highlight_d result--url-above-snippet" data-domain="www.w3schools.com" data-hostname="www.w3schools.com" data-nir="1">
-        <div class="result__body links_main links_deep">
-            <h2 class="result__title js-result-title"><a class="result__a js-result-title-link" rel="noopener" href="https://www.w3schools.com/Tags/att_output_form.asp">HTML output form Attribute - W3Schools</a>
-                <a class="result__check" rel="noopener" href="https://www.w3schools.com/Tags/att_output_form.asp"><span class="result__check__tt">Your browser indicates if you've visited this link</span></a>
-            </h2>
-            <div class="result__extras js-result-extras">
-                <div class="result__extras__url"><span class="result__icon "><a href="/?q=html%20output%20form%20template+site:www.w3schools.com&amp;t=brave" title="Search domain w3schools.com" class="js-result-extras-site_search"><img data-src="//external-content.duckduckgo.com/ip3/www.w3schools.com.ico" height="16" width="16" title="Search domain w3schools.com" class="result__icon__img js-lazyload-icons" src="//external-content.duckduckgo.com/ip3/www.w3schools.com.ico"></a></span>
-                    <a href="https://www.w3schools.com/Tags/att_output_form.asp" rel="noopener" class="result__url js-result-extras-url"><span class="result__url__domain">https://www.w3schools.com</span><span class="result__url__full">/Tags/att_output_form.asp</span></a>
-                </div>
-            </div>
-            <div class="result__snippet js-result-snippet">Description. form_id. Specifies the <b>form</b> element the &lt;<b>output</b>&gt; element belongs to. The value of this attribute must be the id attribute of a &lt;<b>form</b>&gt; element in the same document. <b>HTML</b> &lt;<b>output</b>&gt;
-                tag.
-            </div>
-        </div>
-    </div>
+    <a href="traluanvan/forn-thong-tin/form.php">Mượn luận văn</a>
 </body>
 
 </html>
