--- a/test/test.html
+++ b/test/test.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="traluanvan/forn-thong-tin/form.php">Mượn luận văn</a>
+    <a href="http://traluanvan.herokuapp.com//forn-thong-tin/form.php">Mượn luận văn</a>
     <h1></h1>
 </body>
 
