--- a/test/html.html
+++ b/test/html.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <a href="http://traluanvan.herokuapp.com//forn-thong-tin/form.php">Mượn luận văn</a>
-    <h1></h1>
+    <a href="../admin/admin-delete.php?mlv=">Xóa Đơn Mượn Này</a>
 </body>
 
 </html>
