nút hiện form-thong-tin-2.0 trong file view.php

--- a/test/html.html
+++ b/test/html.html
@@ -10,6 +10,12 @@
 
 <body>
     <a href="../admin/admin-delete.php?mlv=">Xóa Đơn Mượn Này</a>
+    <p></p>
 </body>
+<script>
+    var filename = location.pathname.match(/[^\/]+$/)[0]
+
+    console.log(filename);
+</script>
 
 </html>
